my-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      imagePullSecrets:
      - name: my-registry-key-two
      containers:
      - name: my-app
        image: 839895325100.dkr.ecr.us-east-1.amazonaws.com/my-app:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
